--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
         <img src="./Images/headphones-solid.svg"style="width: 12px;height: 12px;"><strong>Music</strong>
        
         <img src="./Images/gamepad-solid.svg"style="width: 12px;height: 12px;"><strong>Games</strong>
+        <ul>
+            <li>GDG</li>
+            <li>GDG</li>
+            <li>GDG</li>
+        </ul>
     </div>
     
        </body>
